<resources>
    <string name="app_name" translatable="false">BaseProject</string>
    <string name="facebook_app_id" translatable="false">1234</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_spain" translatable="false">Espalier</string>
    <string name="language_portugal" translatable="false">Portuguese</string>
    <string name="language_hindi" translatable="false">भारतीय भाषा</string>
    <string name="language_germany" translatable="false">Deutsch</string>
    <string name="language_brazil" translatable="false">Lingua Brasilia</string>
    <string name="language_japan" translatable="false">日本</string>
    <string name="language_korean" translatable="false">한국어</string>
    <string name="language_france" translatable="false">Francais</string>
    <string name="language_china" translatable="false">中国人</string>
    <string name="language_indo" translatable="false">Indonesian</string>
    <string name="language_dutch_nl" translatable="false">Dutch</string>
    <string name="language_danish_da" translatable="false">Danish</string>
    <string name="language_zuhu_zu" translatable="false">Zulu</string>
    <string name="language_viet_nam" translatable="false">Việt Nam</string>
    <string name="language_irish_en_ie" translatable="false">Irish</string>
    <string name="language_italian_it" translatable="false">Italian</string>
    <string name="language_polish_pl" translatable="false">Polish</string>
    <string name="language_russian" translatable="false">Russian</string>
    <string name="language_turkish" translatable="false">Turkish</string>
    <string name="language_malay" translatable="false">Malay</string>
    <string name="language_filipino" translatable="false">Filipino</string>
    <string name="language_ukrainian" translatable="false">Ukrainian</string>
    <string name="language_afrikaans" translatable="false">Afrikaans</string>

    <string name="this_action_can_contain_ad">This action can contain ad</string>
    <string name="languages">Languages</string>
    <string name="language">Language</string>
    <string name="access_your">ACCESS YOUR</string>
    <string name="camera">CAMERA</string>
    <string name="allow_access">Allow access</string>
    <string name="des_permission">Need to use camera for magnification feature, so please grant camera permission to work the feature.</string>
    <string name="get_started">Get Started</string>
    <string name="preview">Preview</string>
    <string name="string_res_tutorial1">Drag the slider to the right side to \n\t\t\t zoom in the object</string>
    <string name="string_res_tutorial2">Move the slider up or down to \n\t\t\t adjust the exposure</string>
    <string name="string_res_tutorial3">Tab the lighting button to turn on the flashlight</string>
    <string name="string_res_tutorial4">Photo after capturing will be saved in Gallery</string>
    <string name="string_res_tutorial5">Tab the button to hide/unhide function slider</string>
    <string name="string_btn_next_tuturial">Next</string>
    <string name="string_btn_enjoy_app">Enjoy App!</string>
    <string name="permission">Permission</string>
    <string name="please_allow_us_to_access_to_the_external_memory">Please allow us to access to the external memory..</string>
    <string name="go_to_setting">Go to settings</string>
    <string name="save_sucess">Save image successfully!</string>
    <string name="let_us_know_your_experience_5_stars_is_the_best_on_google_play">Let us know your experience 5 stars is the best on Google Play!</string>
    <string name="rate_us">Rate us</string>
    <string name="do_you_like_the_app">Do you like the app?</string>
    <string name="thank_you">Thank you very much!</string>
    <string name="delete_picture">Delete picture</string>
    <string name="are_you_sure_to_delete_this_picture">Are you sure to delete this picture</string>
    <string name="delete">Delete</string>
    <string name="string_gallery">Gallery</string>
    <string name="tutorial">Tutorial</string>
    <string name="private_policy">Private Policy</string>
    <string name="terms_of_conditions">Terms of Conditions</string>
    <string name="share_app">Share app</string>
    <string name="rate_app">Rate app</string>
    <string name="settings">Settings</string>
    <string name="english">English</string>
    <string name="delete_file_success">Delete file success!</string>
    <string name="goto_setting">Goto Setting</string>
    <string name="close">Close</string>
    <string name="you_must_grant_permission_to_use">You must grant permission to use</string>
    <string name="no_thing_to_show">No thing to show</string>
    <string name="there_are_no_images_in_this_folder">There are no images in this folder</string>
    <string name="take_picture">Take picture</string>
    <string name="gallery">Gallery</string>
    <string name="retake">Retake</string>
</resources>